packages/svelte/tests/compiler-errors/samples/store-autosub-context-module/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'store_invalid_subscription',
		message: 'Cannot reference store value inside `<script context="module">`',
		position: [164, 168]
	}
});
